test/parser/mixed-case-hex-literal.delta
// RUN: %check_errors %not %delta -parse %s

void main() {
    // CHECK: [[@LINE+1]]:16: error: mixed letter case in hex literal
    var i = 0xfF;
}
